Landing page little changes (yes, again)

--- a/hackaton/landing/templates/index.html
+++ b/hackaton/landing/templates/index.html
@@ -16,7 +16,7 @@
                         loading="lazy" 
                         width="1120" 
                         height="480" 
-                        class="w-full h-auto max-h-[400px] md:max-h-[500px] lg:max-h-[600px] object-contain" 
+                        class="w-full h-full max-h-[400px] md:max-h-[500px] lg:max-h-[600px] object-contain" 
                         src="{% static 'images/fulllogo.svg' %}"
                         style="color:transparent"
                     >
