--- a/hackaton/landing/templates/includes/footer.html
+++ b/hackaton/landing/templates/includes/footer.html
@@ -53,7 +53,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/bestkosice" target="_blank" rel="noopener noreferrer" class="hover:underline">
+                        <a href="https://www.instagram.com/code_4_best" target="_blank" rel="noopener noreferrer" class="hover:underline">
                             Instagram
                         </a>
                     </li>
