--- a/hackaton/landing/templates/index.html
+++ b/hackaton/landing/templates/index.html
@@ -395,7 +395,7 @@
 
     </div>
 </section>
-
+test
 <!-- About Project Section -->
 <section id="about-project" class="py-12 sm:py-16 md:py-24 bg-[#f2edda]">
     <div class="container mx-auto px-4 sm:px-6 md:px-8">
