--- a/hackaton/landing/templates/index.html
+++ b/hackaton/landing/templates/index.html
@@ -396,6 +396,7 @@
     </div>
 </section>
 test
+test2
 <!-- About Project Section -->
 <section id="about-project" class="py-12 sm:py-16 md:py-24 bg-[#f2edda]">
     <div class="container mx-auto px-4 sm:px-6 md:px-8">
